main Optimize gradle.kts